dba/dba-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dba-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dba-app
  template:
    metadata:
      labels:
        app: dba-app
    spec:
      containers:
      - name: dba-app
        image: rasoltani/dba-app:dev3
        ports:
        - containerPort: 1323
