dba/dba-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dba-service
spec:
  selector:
    app: dba-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1323
  type: ClusterIP
